<resources>
    <string name="app_name">Practica 1ev</string>
    <string name="contact_tlfn">Telefono de contacto:</string>
    <string name="location_tag">Direccion:</string>
    <string name="contact_mail_tag">Correo de contacto:</string>
    <string name="web_tag">Pagina web</string>
    <string name="contacts_btn_tag">Personas</string>
    <string name="guardar_info">Guardar Info</string>
</resources>